--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <header>
    <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
+   <link href="./style.css" rel="stylesheet">
 </header>
 
 <h1>Animation Buttons</h1>
